--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <nav>
+        <img src="#" alt="">
+        <ul>
+            <li>Home</li>
+            <li>Info</li>
+            <li>Helpline no</li>
+            <li>Login</li>
+        </ul>
+    </nav>
     
 
     <script src="./script.js"></script>
