--- a/index.html
+++ b/index.html
@@ -4,19 +4,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <nav>
-        <img src="#" alt="">
-        <ul>
-            <li>Home</li>
-            <li>Info</li>
-            <li>Helpline no</li>
-            <li>Login</li>
-        </ul>
-    </nav>
-    
+    <div class="container2">
+        <img src="./images/satyamevjayte.png" alt="" class="logo">
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 32%;">
+              <li class="nav-item">
+                <a class="nav-link active fs-3" aria-current="page" href="#">Home 
+                    &nbsp;| </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active fs-3" aria-current="page" href="#">Info &nbsp;| </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active fs-3" aria-current="page" href="#">Helpdesk &nbsp; | </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active fs-3" aria-current="page" href="#">Login</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <hr><br>
+      <h1></h1>
+      <div class="row row-cols-1 row-cols-md-4 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="./images/kiran bedi.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Kiran Bedi</h5>
+              <p class="card-text">Kiran Bedi is the first woman IPS officer in India. She joined the Indian Police Service in 1972 and was the 24th Lieutenant Governor of Puducherry.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./images/ajitdoval.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Ajit Doval</h5>
+              <p class="card-text">Ajit Doval is the National Security Advisor of India. He was recruited in the Indian Police Service in 1968 in the Kerala cadre.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./images/sanjukta.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Sanjukta Parashar</h5>
+              <p class="card-text">Sanjukta Parashar Known as Iron Lady of Assam.She is the courageous officer who took down 16 militants. She has become a symbol of bravery.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./images/shivdeep.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Shivdeep Lande</h5>
+              <p class="card-text">Shivdeep Waman Lande is 2006 batch IPS officer. He is currently serving as DCP in the Anti-narcotics cell, Crime Branch (Mumbai) in Maharashtra Police.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./images/safin.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Safin Hasan</h5>
+              <p class="card-text">IPS Safin Hasan is the youngest IPS officer of the country.He began his new position as the Assistant Superintendent of Police for District Jamnagar, entering a setting that typifies his tenacious character.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./images/merinJoseph.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Merin Joseph</h5>
+              <p class="card-text">IPS officer Merin Joseph embarked on a mission to bring a child-rape accused to justice, transcending international borders. Her relentless pursuit of the fugitive showcased her unwavering commitment towards safety.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./images/vishvas.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Vishwas Nagre-Patil</h5>
+              <p class="card-text">Vishwas Nangre-Patil, an IPS officer appointed as the Joint Commissioner of Police, Mumbai exemplifies the face a quintessential, competent police officer who has  endeared himself to the higher rank and file of his dept.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./images/saumya.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Soumya Sambasivan</h5>
+              <p class="card-text">IPS officer Soumya Sambasivan is the first female SP in Shimla, Himachal Pradesh. She is known for solving six murder cases including two blind murder mysteries when she posted in Sirmaur district for two years.</p>
+            </div>
+          </div>
+        </div>
+        
+      </div>
 
     <script src="./script.js"></script>
 </body>
