--- a/index.html
+++ b/index.html
@@ -6,35 +6,41 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!--Font-awesome-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container2">
-        <img src="./images/satyamevjayte.png" alt="" class="logo">
-    </div>
+  <div class="container2">
+    <img src="./images/satyamevjayte.png" alt="" class="logo">
+  </div>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 32%;">
               <li class="nav-item">
-                <a class="nav-link active fs-3" aria-current="page" href="#">Home 
+                <a class="nav-link active fs-3" aria-current="page" href="./index.html">Home 
                     &nbsp;| </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active fs-3" aria-current="page" href="#">Info &nbsp;| </a>
+                <a class="nav-link active fs-3" aria-current="page" href="./info.html">Info &nbsp;| </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active fs-3" aria-current="page" href="#">Helpdesk &nbsp; | </a>
+                <a class="nav-link active fs-3" aria-current="page" href="./helpdesk.html">Helpdesk &nbsp; | </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active fs-3" aria-current="page" href="#">Login</a>
+                <a class="nav-link active fs-3" aria-current="page" href="./login.html">Login</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
       <hr><br>
-      <h1></h1>
+      <h1 class="homeheading">Some Renowned IPS Officers</h1>
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
           <div class="card">
@@ -108,8 +114,16 @@
             </div>
           </div>
         </div>
-        
       </div>
+
+      <footer class="footer">
+        <div class="footer-body">
+          <p>&copy; All Rights Reserved.</p>
+          <div class="socialLinks">
+            <a href="#" class="socialIcon"><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+      </footer>
 
     <script src="./script.js"></script>
 </body>
