authentication has been set

--- a/cases.html
+++ b/cases.html
@@ -6,21 +6,21 @@
     <!--Font-awesome-->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <link rel="stylesheet" href="style.css">
     <title>Cases</title>
 </head>
 <body>
     <h1>Cases</h1>
 
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer-body">
           <p>&copy; All Rights Reserved.</p>
           <div class="socialLinks">
             <a href="#" class="socialIcon"><i class="fab fa-twitter"></i></a>
           </div>
         </div>
-      </footer>
+      </footer> -->
 </body>
 </html>
