--- a/login.html
+++ b/login.html
@@ -7,14 +7,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
 
     <!--Font-awesome-->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
 
     <link rel="stylesheet" href="style.css" />
     <title>Login</title>
@@ -31,33 +29,28 @@
               <a
                 class="nav-link active fs-3"
                 aria-current="page"
-                href="./index.html"
-                >Home &nbsp;|
+                href="./index.html">Home &nbsp;|
               </a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active fs-3"
                 aria-current="page"
-                href="./info.html"
-                >Info &nbsp;|
+                href="./info.html">Info &nbsp;|
               </a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active fs-3"
                 aria-current="page"
-                href="./helpdesk.html"
-                >Helpdesk &nbsp; |
+                href="./helpdesk.html">Helpdesk &nbsp; |
               </a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active fs-3"
                 aria-current="page"
-                href="./login.html"
-                >Login</a
-              >
+                href="./login.html">Login</a>
             </li>
           </ul>
         </div>
@@ -67,7 +60,7 @@
     <br />
 
     <div class="loginForm">
-      <form action="#" method="post">
+      <form>
         <h3>Login</h3>
 
         <label for="username" class="labelLogin">Username :</label>
@@ -84,7 +77,8 @@
           id="password"
           name="password"><br>
 
-        <button type="submit" class="btn" onclick="policeLogin()">Login</button><br>
+        <button type="button" class="btn" onclick="policeLogin(event)">Login</button><br>
+        <p id="loginMsg" style="font-weight: bold; text-align: center; margin-top: 20px;"></p>
       </form>
     </div>
 
