added the information in info page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h1 class="homeheading">Some Renowned IPS Officers</h1>
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img src="./images/kiran bedi.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Kiran Bedi</h5>
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img src="./images/ajitdoval.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Ajit Doval</h5>
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img src="./images/sanjukta.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Sanjukta Parashar</h5>
@@ -70,7 +70,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img src="./images/shivdeep.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Shivdeep Lande</h5>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img src="./images/safin.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Safin Hasan</h5>
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img src="./images/merinJoseph.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Merin Joseph</h5>
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img src="./images/vishvas.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Vishwas Nagre-Patil</h5>
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img src="./images/saumya.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Soumya Sambasivan</h5>
