--- a/info.html
+++ b/info.html
@@ -41,12 +41,67 @@
       </nav>
       <hr><br>
 
+      <h1 class="homeheading">Some Cases Handled by Indian Police</h1>
+      <div class="row row-cols-1 row-cols-md-2 g-5">
+        <div class="col">
+          <div class="card h-100 w-80 mx-2">
+            <div class="card-body">
+              <h5 class="card-title">Disha Case(Dr named Priyanka was raped)</h5>
+              <p class="card-text"><b>Criminals:-</b> Chintakunta Chennakeshavulu, Jolu Shiva, Jollu Naveen, Mohammed Arif<br>
+                <b>Rape date:-</b> 27 Nov 2019<br>
+                <b>Encounter date:-</b> 6 Dec 2019 by Hyderabad Police</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 w-80 mx-2">
+            <div class="card-body">
+              <h5 class="card-title">26/11 case</h5>
+              <p class="card-text">
+                <b>Criminal or terrorist grp involved:-</b> Zakuir Rehman Lakhiv and Lashkar-e-Taiba<br>
+                <b>Purpose:-</b> Spread Islamic Terrorism<br>
+                <b>Total deaths:-</b> 170+<br>
+                <b>Action taken:-</b> 9 terrorists were encountered, 1 terrorist was arrested by Maharashtra police
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 w-80 mx-2">
+            <div class="card-body">
+              <h5 class="card-title">Sony Sambandh Case</h5>
+              <p class="card-text"><b>Criminal:-</b> Arif Azim<br>
+                <b>Sections for arrest:-</b> 419,418,420<br>
+                <b>Occupation:-</b> Employee in a call center in Noida<br>
+                <b>Age:-</b> 24(At the time of arrest)<br>
+                Case handled by Delhi(Noida) Police</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 w-80 mx-2">
+            <div class="card-body">
+              <h5 class="card-title">Sanjay Dutt</h5>
+              <p class="card-text"><b>Case:- </b>Illegal possession of weapons and firearms, involved in 1993 mumbai serial blast<br>
+                <b>DOB:-</b> 29 July 1959<br>
+                <b>Arrested:-</b> 19 April 1993(by maharashtra police)<br>
+                <b>Bail granted:-</b> 1993,1995,2007,2013,2015<br>
+                <b>Released from jail:-</b> 25 Feb 2016</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+          
       <footer class="footer">
         <div class="footer-body">
           <p>&copy; All Rights Reserved.</p>
-          <div class="socialLinks">
+          <d class="socialLinks">
             <a href="#" class="socialIcon"><i class="fab fa-twitter"></i></a>
-          </div>
+          </d<iv>
         </div>
       </footer>
     
