--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
     <br />
 
     <div class="loginForm">
-      <form>
+      <form action="script2.js">
         <h3>Login</h3>
 
         <label for="username" class="labelLogin">Username :</label>
@@ -91,6 +91,6 @@
       </div>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./script2.js"></script>
   </body>
 </html>
